# video-preflight

./: LICENSE  README.md  pyproject.toml
src/video_preflight/: __init__.py  exiftool.config
src/video_preflight/handbrake_presets/: Matt HEVC HQ.json
