[project]
name = "video-preflight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew Plough", email = "matt.plough@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[project.scripts]
video-preflight = "video_preflight:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
